--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.rcheung.budget:common:1.0-SNAPSHOT'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE'
@@ -20,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.1.3.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.1.3.RELEASE'
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.3.RELEASE'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1'
     runtimeOnly 'com.h2database:h2:1.4.+'
 }
 
