--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.1.3.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.1.3.RELEASE'
+    implementation 'org.springframework.security:spring-security-oauth2-jose:5.1.5.RELEASE'
+    implementation 'org.springframework.security:spring-security-oauth2-client:5.1.5.RELEASE'
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.3.RELEASE'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1'
     runtimeOnly 'com.h2database:h2:1.4.+'
